@@ -1,6 +1,5 @@
 module ActionView
   class TemplateHandler
-
     def self.line_offset
       0
     end
